# personal-site

./: .gitignore
backend/: .gitignore  Cargo.toml  env_example  shell.nix
backend/src/: auth.rs  config.rs  db.rs  main.rs  routes.rs
backend/src/auth/: auth_user.rs  claims.rs  cookie.rs  db.rs  endpoints.rs  link.rs  login_request.rs  mod.rs  password.rs  roles.rs  token.rs  user.rs
backend/src/blog/: upload.rs
db/: .gitignore  shell.nix
db/migrations/blog/: 20251018183114_initial.up.sql  20251020145133_auth.up.sql
db/migrations/postgres/: 20251019034430_cron.down.sql  20251019034430_cron.up.sql
db/scripts/: colors.sh  create_migration  drop_database  migrate  sql  sql-users  start
frontend/: .gitignore  openapi-ts.config.ts  package-lock.json  package.json  shell.nix  vite.config.ts
frontend/.direnv/: nix-profile-.803579.70c74b02eac4  nix-profile-.803579.70c74b02eac4.rc
frontend/src/: App.vue  axios.ts  main.ts  router.ts  runtime.ts
frontend/src/api/: client.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: Dialog.vue  NavBar.vue  TestEntries.vue  TestEntry.vue  TextField.vue
frontend/src/lib/: auth.ts  openapi.ts
frontend/src/pages/: Admin.vue  NotFound.vue
frontend/src/stores/: auth.ts  user.ts
frontend/src/types/: vue.d.ts
