[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env", "toml"] }
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres", "sqlx_macros"] }
rocket_okapi = { version = "0.9.0", features = ["rocket_db_pools", "swagger"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.7", features = ["postgres", "macros", "runtime-tokio-native-tls"] }
time = { version = "0.3.41", features = ["serde"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
